--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app"></div>
     <div id="map"></div>
+    <div style="height: 200px; width: 100%"></div>
     <script type="module" src="./main.ts"></script>
   </body>
 </html>
