--- a/example/index.html
+++ b/example/index.html
@@ -10,6 +10,8 @@
     <div id="app"></div>
     <div id="map"></div>
     <div style="height: 200px; width: 100%"></div>
+    <div id="map2"></div>
+    <div style="height: 200px; width: 100%"></div>
     <script type="module" src="./main.ts"></script>
   </body>
 </html>
