--- a/example/index.html
+++ b/example/index.html
@@ -8,10 +8,20 @@
   </head>
   <body>
     <div id="app"></div>
+    <h1>Example map #1</h1>
+
+    <h3>Width 100%. Size map svg do not adaptive</h3>
     <div id="map"></div>
     <div style="height: 200px; width: 100%"></div>
-    <div id="map2"></div>
+    <h1>Example map #2</h1>
+    <h3>Width 100%. Size map svg is adaptive</h3>
+    <div id="map2" class="second-map"></div>
     <div style="height: 200px; width: 100%"></div>
+    <h1>Example map #3</h1>
+    <h3>Width 50%. Size map svg is adaptive</h3>
+    <div id="map3" class="third-map"></div>
+    <div style="height: 200px; width: 100%"></div>
+
     <script type="module" src="./main.ts"></script>
   </body>
 </html>
