feat(pill): add mobile work

--- a/example/index.html
+++ b/example/index.html
@@ -16,7 +16,7 @@
 
     <h3>Width 100%. Size map svg do not adaptive</h3>
     <p>Example settings for this map</p>
-    <pre><code class="language-js">
+    <pre class="precode"><code class="language-js">
       const nodeMap = document.getElementById('map');
       const baloonTheme = {
         colorBG: '#eeeeee', // Baloon background color
@@ -83,7 +83,7 @@
     <h3>Width 100%. Size map svg is adaptive</h3>
 
     <p>Example settings for this map</p>
-    <pre><code class="language-js">
+    <pre class="precode"><code class="language-js">
       const nodeMap = document.getElementById('map');
       const baloonTheme = {
         colorBG: '#eeeeee', // Baloon background color
@@ -149,7 +149,7 @@
     <h3>Width 50%. Size map svg is adaptive</h3>
 
     <p>Example settings for this map</p>
-    <pre><code class="language-js">
+    <pre class="precode"><code class="language-js">
       const nodeMap = document.getElementById('map');
       const baloonTheme = {
         colorBG: '#eeeeee', // Baloon background color
