--- a/example/index.html
+++ b/example/index.html
@@ -148,9 +148,8 @@
       }
     </code>
     </pre>
-    <div class="nonezoom">
-      <div id="map2" class="second-map"></div>
-    </div>
+
+    <div id="map2" class="second-map" style="width: 100%; height: 10px"></div>
 
     <div style="height: 200px; width: 100%"></div>
     <h1>Example map #3</h1>
