feat(pill): add multy layer map

--- a/example/index.html
+++ b/example/index.html
@@ -149,7 +149,7 @@
     </code>
     </pre>
 
-    <div id="map2" class="second-map" style="width: 100%; height: 10px"></div>
+    <div id="map2" class="second-map"></div>
 
     <div style="height: 200px; width: 100%"></div>
     <h1>Example map #3</h1>
@@ -226,6 +226,33 @@
     <div id="map3" class="third-map"></div>
     <div style="height: 200px; width: 100%"></div>
 
+    <h1>Example map #4</h1>
+    <h3>MultyLayer. Size map svg is adaptive</h3>
+    <div class="buttons-floors">
+      <ul class="ul-li-button">
+        <li>
+          <button id="floor-0" class="btn__map">0 этаж</button>
+        </li>
+        <li>
+          <button id="floor-1" class="btn__map">1 этаж</button>
+        </li>
+        <li>
+          <button id="floor-2" class="btn__map">2 этаж</button>
+        </li>
+        <li>
+          <button id="floor-3" class="btn__map">3 этаж</button>
+        </li>
+        <li>
+          <button id="floor-4" class="btn__map">4 этаж</button>
+        </li>
+        <li>
+          <button id="floor-5" class="btn__map">5 этаж</button>
+        </li>
+      </ul>
+    </div>
+    <div id="map4" class="multy-map"></div>
+    <div style="height: 200px; width: 100%"></div>
+
     <div id="myballoon" class="hidden">
       <div class="baseballoon">
         <div class="balloon">
@@ -271,6 +298,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     <script>
       hljs.highlightAll()
+      console.log('Hello Index html')
+      function fff() {
+        console.log(window)
+      }
     </script>
   </body>
 </html>
