feat(pill): add Source SVG from String

--- a/example/index.html
+++ b/example/index.html
@@ -253,6 +253,11 @@
     <div id="map4" class="multy-map"></div>
     <div style="height: 200px; width: 100%"></div>
 
+    <h1>Example map #5</h1>
+    <h3>Load SVG from string. Size map svg is adaptive</h3>
+    <div id="map5" class="third-map"></div>
+    <div style="height: 200px; width: 100%"></div>
+
     <div id="myballoon" class="hidden">
       <div class="baseballoon">
         <div class="balloon">
