feat(pill): add fix adaptive SVG

--- a/example/index.html
+++ b/example/index.html
@@ -20,7 +20,7 @@
     <div id="app"></div>
     <h1>Example map #1</h1>
 
-    <h3>Width 100%. Size map svg do not adaptive</h3>
+    <h3>Width 100%. Size map svg is adaptive</h3>
     <p>Example settings for this map</p>
     <pre class="precode"><code class="language-js">
       const nodeMap = document.getElementById('map');
