feat(pill): add slect item method

--- a/example/index.html
+++ b/example/index.html
@@ -288,6 +288,19 @@
       </ul>
     </div>
     <div id="map4" class="multy-map"></div>
+
+    <div class="button-group hidden">
+      <p>Example custom hilight and show selected item</p>
+
+      <ul class="ul__select">
+        <li>
+          <button id="btn__select1" class="btn__select">Select #1</button>
+        </li>
+        <li>
+          <button id="btn__select2" class="btn__select">Select #2</button>
+        </li>
+      </ul>
+    </div>
     <div class="divide-block"></div>
 
     <h1>Example map #5</h1>
