feat(pill): small fix css title map

--- a/example/index.html
+++ b/example/index.html
@@ -83,7 +83,7 @@
 
     </code>
     </pre>
-    <div id="map"></div>
+    <div id="map" class="svgmap"></div>
     <div class="divide-block"></div>
     <h1>Example map #2</h1>
     <h3>Width 100%. Size map svg is adaptive</h3>
@@ -149,7 +149,7 @@
     </code>
     </pre>
 
-    <div id="map2" class="second-map"></div>
+    <div id="map2" class="second-map svgmap"></div>
 
     <div class="divide-block"></div>
     <h1>Example map #3</h1>
@@ -260,7 +260,7 @@
   </code>
 </pre>
 
-    <div id="map3" class="third-map"></div>
+    <div id="map3" class="third-map svgmap"></div>
     <div class="divide-block"></div>
 
     <h1>Example map #4</h1>
@@ -287,7 +287,7 @@
         </li>
       </ul>
     </div>
-    <div id="map4" class="multy-map"></div>
+    <div id="map4" class="multy-map svgmap"></div>
 
     <div class="button-group hidden">
       <p>Example custom hilight and show selected item</p>
@@ -305,7 +305,7 @@
 
     <h1>Example map #5</h1>
     <h3>Load SVG from string. Size map svg is adaptive</h3>
-    <div id="map5" class="third-map"></div>
+    <div id="map5" class="third-map svgmap"></div>
     <div class="divide-block"></div>
 
     <div id="myballoon" class="hidden">
