feat(pill): fix scroll events in multyselect items

--- a/example/index.html
+++ b/example/index.html
@@ -265,6 +265,33 @@
 
     <h1>Example map #4</h1>
     <h3>MultyLayer. Size map svg is adaptive</h3>
+    <div class="button-group hidden">
+      <p>Example custom highlight and show selected item</p>
+
+      <ul class="ul__select">
+        <li>
+          <button id="btn__select1" class="btn__select">
+            Select one item #1
+          </button>
+        </li>
+        <li>
+          <button id="btn__select2" class="btn__select">
+            Select one item #2
+          </button>
+        </li>
+        <li>
+          <button id="btn__group_select1" class="btn__select">
+            Select group #1
+          </button>
+        </li>
+        <li>
+          <button id="btn__group_select2" class="btn__select">
+            Select group #2
+          </button>
+        </li>
+      </ul>
+    </div>
+
     <div class="buttons-floors">
       <ul class="ul-li-button">
         <li>
@@ -287,20 +314,9 @@
         </li>
       </ul>
     </div>
+
     <div id="map4" class="multy-map svgmap"></div>
 
-    <div class="button-group hidden">
-      <p>Example custom hilight and show selected item</p>
-
-      <ul class="ul__select">
-        <li>
-          <button id="btn__select1" class="btn__select">Select #1</button>
-        </li>
-        <li>
-          <button id="btn__select2" class="btn__select">Select #2</button>
-        </li>
-      </ul>
-    </div>
     <div class="divide-block"></div>
 
     <h1>Example map #5</h1>
