feat(pill): small fix css balloon

--- a/example/index.html
+++ b/example/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css"
     />
+    <link rel="stylesheet" href="../src/style.css" />
   </head>
   <body>
     <div id="app"></div>
@@ -266,7 +267,7 @@
     <h1>Example map #4</h1>
     <h3>MultyLayer. Size map svg is adaptive</h3>
     <div class="button-group hidden">
-      <p>Example custom highlight and show selected item</p>
+      <p class="text-center">Example custom highlight and show selected item</p>
 
       <ul class="ul__select">
         <li>
